--- a/app/src/main/res/layout/activity_event_view.xml
+++ b/app/src/main/res/layout/activity_event_view.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Tag"
+        android:text="@string/event_view_tag"
         android:id="@+id/eventTag"
         android:layout_marginTop="53dp"
         android:layout_below="@+id/eventTitle"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Get Directions"
+        android:text="@string/event_view_directions"
         android:id="@+id/eventMapRedirect"
         android:layout_marginTop="45dp"
         android:layout_below="@+id/eventTag"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="From 3:05 to 3:30"
+        android:text="@string/event_view_duration"
         android:id="@+id/eventDuration"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/eventDescription"
+        android:text="@string/event_view_description"
         android:id="@+id/eventDescription"
         android:layout_marginTop="48dp"
         android:layout_below="@+id/eventDuration"
