--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
-    <ListView
+    <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/expandableListView"
+        android:groupIndicator="@null"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="72dp" />
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
