--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/list"
         android:groupIndicator="@null"
-        android:layout_below="@+id/textView"
+        android:layout_below="@android:id/list"
         android:layout_alignParentStart="true" />
 
 
