--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
     <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:groupIndicator="@null"
-        android:layout_below="@android:id/list"
+        android:layout_below="@+id/text"
         android:layout_alignParentStart="true" />
 
 
