--- a/app/src/main/res/layout/activity_ignore_list.xml
+++ b/app/src/main/res/layout/activity_ignore_list.xml
@@ -6,12 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.huscii.fornow.IgnoreListFragment">
 
-    <TextView android:text="@string/ignore_list_title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-        android:name="com.huscii.fornow.IgnoreListFragment" tools:layout="@layout/fragment_ignore_list"
-        android:layout_width="match_parent" android:layout_height="match_parent" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@android:id/list"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
