--- a/app/src/main/res/layout/event_body.xml
+++ b/app/src/main/res/layout/event_body.xml
@@ -7,48 +7,35 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/event_view_tag"
-        android:id="@+id/eventTag"
-        android:layout_marginTop="53dp"
-        android:layout_below="@+id/eventTitle"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/eventTag" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/event_view_directions"
-        android:id="@+id/eventMapRedirect"
-        android:layout_marginTop="45dp"
-        android:layout_below="@+id/eventTag"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/eventMapRedirect" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/event_view_duration"
-        android:id="@+id/eventDuration"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/eventDuration" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/event_view_description"
-        android:id="@+id/eventDescription"
-        android:layout_marginTop="48dp"
-        android:layout_below="@+id/eventDuration"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/eventDescription" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Starts in 5 min."
-        android:id="@+id/eventStart"
-        android:layout_alignTop="@+id/eventTitle"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/eventStart" />
 
     <Button
         android:layout_width="wrap_content"
