--- a/app/src/main/res/layout/event_head.xml
+++ b/app/src/main/res/layout/event_head.xml
@@ -9,6 +9,5 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Movie Night"
         android:id="@+id/eventTitle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true" />
 </LinearLayout>
