--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -42,7 +42,8 @@
     <Button
         android:id="@+id/btnAttend"
         android:layout_width="wrap_content"
-        android:layout_height="0dp" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"/>
 
     <Button
         android:id="@+id/btnIgnore"
